--- a/.github/workflows/github-actions-remote-testbuild.yml
+++ b/.github/workflows/github-actions-remote-testbuild.yml
@@ -16,9 +16,7 @@ jobs:
         uses: shimataro/ssh-key-action@v2
         with:
                 key: ${{ secrets.SSH_PRIVATE_KEY }} 
-                known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-      - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+                known_hosts: ${{ secrets.KNOWN_HOSTS }}
       - name: Update source
         run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} ./prepare_agent.sh ${{ github.event.repository.name }} ${GITHUB_REF##*/}
       - name: Build
