--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Library\Library.csproj" />
+    <ProjectReference Include="..\CachePersist\CachePersist.csproj" />
   </ItemGroup>
 
 </Project>
